[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "euv-mask-reconstruct"
version = "0.1.0"
description = "EUV mask defect 3D reconstruction from multi-angle SEM images using Triton Inference Server"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.104",
    "uvicorn[standard]>=0.24",
    "numpy>=1.24",
    "opencv-python>=4.8",
    "tritonclient[grpc]>=2.38",
    "grpcio>=1.59",
    "pydantic>=2.5",
    "python-multipart>=0.0.6",
    "websockets>=12.0",
    "aiofiles>=23.2",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4",
    "pytest-asyncio>=0.21",
]

[tool.setuptools.packages.find]
where = ["python"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
